finish first part

--- a/src/views/mainWindow.html
+++ b/src/views/mainWindow.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html land="en">
+
 <head>
   <title>Investment</title>
 </head>
+
 <body>
   <h1>Investment</h1>
-</body>
-</html>
+  Start: <input type="month" name="start" id="startDate"><br>
+  End: <input type="month" name="end" id="endDate"><br>
+  Fund Data: <input type="file" name="fund", id="fundFilePath"><br>
+  <button id="getReportBtn">Get Report</button>
 
+  <script src="../controllers/dashboardController.js"></script>
+</body>
+
+</html>
